Fixed nav bar links from jumping on hover

--- a/css/hw3.css
+++ b/css/hw3.css
@@ -32,6 +32,7 @@ nav a {
     background-color: #F25CA2;
     color: #032CA6;
     margin: 2%;
+    border: 2px solid transparent; 
     border-radius: 5px;
     text-decoration: none;
     padding: 10px;
